first-routed-webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp-routed
  labels:
    app: webapp-routed
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: master.webapp
    http:
      paths:
      - path: /webapp-routed
        pathType: "Prefix"
        backend:
          service:
            name: webapp-service
            port:
              number: 80
